assets/scss/main.scss
@import "support/functions";
@import "variables_project";
@import "variables";
@import "support/mixins";

@import "../vendor/bootstrap/scss/bootstrap";

@import "../vendor/Font-Awesome/scss/fontawesome.scss";
@import "../vendor/Font-Awesome/scss/solid.scss";
@import "../vendor/Font-Awesome/scss/brands.scss";
@import url('https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap');

@import "support/utilities";
@import "colors";
@import "boxes";
@import "blog";
@import "code";
@import "nav";
@import "sidebar-tree";
@import "sidebar-toc";
@import "buttons";
@import "breadcrumb";
@import "alerts";
@import "content";
@import "search";
@import "main-container";
@import "blocks/blocks";
@import "section-index";
@import "pageinfo";




@if $td-enable-google-fonts {
    @import url($web-font-path);
}
.td-box.linkbox {
    padding:1rem;
    padding-top: 5rem;
}
.navbar-collapse {
    flex-grow: unset;
}
.navbar-toggler {
    position: fixed;
    z-index: 1;
    right:5px;
    top: 15px;

}
@include media-breakpoint-down(md) {
    .navbar-nav-s-s {
        text-align: left;
        background-color: rgba(0, 0, 0, 0.7);
        width: 200px;
        float: right;
        top: 15px;
        position: fixed;
        right: 5px;
        padding-top: 60px;
        color: #fff;
        padding-left: 15px;
    }
    .td-navbar-cover .nav-link {
        text-shadow: 1px 1px 2px #333;
    }
    .navbar-dark .navbar-nav .nav-link{
        color: #d9d9d9;
    }
    .navbar-dark .navbar-nav .nav-link.active{
        color: #fff;
    }
    .navbar-dark .navbar-nav .nav-link:hover{
        color: #fff;
    }

}
@include media-breakpoint-down(sm) {
    .navbar-nav-s-s {
        text-align: left;
        background-color: rgba(0, 0, 0, 0.7);
        width: 200px;
        float: right;
        top: 15px;
        position: fixed;
        right: 5px;
        padding-top: 60px;
        color: #fff;
        padding-left: 15px;
    }
    .td-navbar-cover .nav-link {
        text-shadow: 1px 1px 2px #333;
    }
    .navbar-dark .navbar-nav .nav-link{
        color: #d9d9d9;
    }
    .navbar-dark .navbar-nav .nav-link.active{
        color: #fff;
    }

}
footer {
    min-height: 150px;

    @include media-breakpoint-down(md) {
         min-height: 200px;
    }
}

// Adjust anchors vs the fixed menu.
@include media-breakpoint-up(md) {
    .td-offset-anchor:target {
        display: block;
        position: relative;
        top: -4rem;
        visibility: hidden;
    }

    h2[id]:before, h3[id]:before, h4[id]:before, h5[id]:before {
        display: block;
        content: " ";
        margin-top: -5rem;
        height: 5rem;
        visibility: hidden;
    }
}

@import "styles_project";

